--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "neuzos",
-  "version": "1.0.0",
-  "description": "An Electron application with Svelte and TypeScript",
+  "productName": "NeuzOS",
+  "version": "2.0.0",
+  "description": "Launcher for Flyff Universe",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": {
+    "name": "Abdelmounaim Bouakouk",
+    "email": "abdelmounaim@bouakouk.com"
+  },
+  "homepage": "https://github.com/thatmounaim/neuzos",
   "scripts": {
     "format": "prettier --plugin prettier-plugin-svelte --write .",
     "lint": "eslint --cache .",
@@ -16,9 +20,12 @@
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:mac": "npm run build && electron-builder --mac --x64 --arm64 --publish never",
+    "build:win": "npm run build && electron-builder --win --publish never",
+    "build:linux": "npm run build && electron-builder --linux --publish never",
+    "release:mac": "npm run build && electron-builder --mac --x64 --arm64 --publish always",
+    "release:win": "npm run build && electron-builder --win --publish always",
+    "release:linux": "npm run build && electron-builder --linux --publish always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
