--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typecheck": "npm run typecheck:node && npm run svelte-check",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
+    "dev:ultra": "electron-vite dev -- --ultra",
+    "dev:performance": "electron-vite dev -- --performance",
+    "dev:potato": "electron-vite dev -- --potato",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
