--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@lucide/svelte": "^0.544.0",
     "clsx": "^2.1.1",
+    "rimraf": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0"
