Enhance session UI with improved card layout and button styles; add session control features

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "typecheck": "npm run typecheck:node && npm run svelte-check",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
+    "dev:session": "electron-vite dev -- --mode=session --session_id=1762712661214",
+    "dev:focus": "electron-vite dev -- --mode=focus --session_id=1762712661214",
+    "dev:focus_fs": "electron-vite dev -- --mode=focus_fullscreen --session_id=1762712661214",
+    "dev:session_launcher": "electron-vite dev -- --mode=session_launcher",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
